Warnings corrected